bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:4: error: illegal start of simple expression
  }
  ^