bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if (negative == true) {
    if (a<0 and b<0)
  }
}